--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/library"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BibliotecaOlas"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".ui.libros.BuscarLibroActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.libros.EditarLibroActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.libros.AgregarLibroActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.libros.ListarLibrosActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.libros.MenuLibrosActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.authentication.RecuperarContraseniaActivity"
             android:exported="false" />
@@ -26,7 +41,7 @@
             android:exported="false" />
         <activity
             android:name=".ui.main.SplashScreen"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
